--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 
-title: Worshop on Good Practices for Machine Learning
+title: Worshop on Machine Learning Good Practices
 description: co-located with ECCB 2022
