--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,6 @@ theme: jekyll-theme-cayman
 
 title: Worshop on Machine Learning Good Practices
 description: co-located with ECCB 2022
+
+github:
+  is_project_page: false
